--- a/Blizzard_case DataAnalysis.ipynb
+++ b/Blizzard_case DataAnalysis.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Dates_data_methods import *\n",
+    "from utils.Dates_data_methods import *\n",
     "from matplotlib.pyplot import figure\n",
     "import matplotlib.dates as mdates\n",
     "import matplotlib.pyplot as plt\n",
@@ -298,7 +298,7 @@
    ],
    "source": [
     "# general database\n",
-    "data = pd.read_csv('blizz_case_db.csv')\n",
+    "data = pd.read_csv('data/blizz_case_db.csv')\n",
     "data = pd.DataFrame(data=data,dtype=object)\n",
     "data[\"datetime\"] = pd.to_datetime(data[\"datetime\"])  \n",
     "data[\"date\"] = pd.to_datetime(data[\"date\"])  \n",
@@ -315,13 +315,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\amelie\\Desktop\\TUM\\Cours\\Seminar\\HK_seminar_2k19\\Dates_data_methods.py:63: FutureWarning: Comparing Series of datetimes with 'datetime.date'.  Currently, the\n",
+      "C:\\Users\\amelie\\Desktop\\TUM\\Cours\\S1\\Seminar\\Clean_repo\\HK_Controversies_Reddit\\utils\\Dates_data_methods.py:63: FutureWarning: Comparing Series of datetimes with 'datetime.date'.  Currently, the\n",
       "'datetime.date' is coerced to a datetime. In the future pandas will\n",
       "not coerce, and a TypeError will be raised. To retain the current\n",
       "behavior, convert the 'datetime.date' to a datetime with\n",
       "'pd.Timestamp'.\n",
       "  df_bef_cr = df_old_dates[df_old_dates['date'] >= datetime.date(y1, m1, d1)].copy()\n",
-      "C:\\Users\\amelie\\Desktop\\TUM\\Cours\\Seminar\\HK_seminar_2k19\\Dates_data_methods.py:64: FutureWarning: Comparing Series of datetimes with 'datetime.date'.  Currently, the\n",
+      "C:\\Users\\amelie\\Desktop\\TUM\\Cours\\S1\\Seminar\\Clean_repo\\HK_Controversies_Reddit\\utils\\Dates_data_methods.py:64: FutureWarning: Comparing Series of datetimes with 'datetime.date'.  Currently, the\n",
       "'datetime.date' is coerced to a datetime. In the future pandas will\n",
       "not coerce, and a TypeError will be raised. To retain the current\n",
       "behavior, convert the 'datetime.date' to a datetime with\n",
@@ -1547,9 +1547,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proper ticket?\n",
+      "We may not live in HK, but we can still make our voices heard\n",
       "\n",
-      "https://www.reddit.com/r/Blizzard/comments/dfmf9u/proper_ticket/\n",
+      "https://www.reddit.com/r/Blizzard/comments/dgbfki/we_may_not_live_in_hk_but_we_can_still_make_our/\n",
       "0.5\n"
      ]
     }
